Changelog for mSearch2.

0.9.2 rc1
==============
- Fixed [[+total]] placeholder for new pdoPage versions.
- More convenient suggestions.
- Added filter "grandparents".

0.9.1 pl2
==============
- Improved verification of search query.
- [mSearch2] Parameter "forceSearch" enabled by default.

0.9.0 pl
==============
- [mFilter2] Changed default &paginator=`` to "pdoPage".
- [mFilter2] Improved filtration of conditions for retrieve resources. Now it handle end snippet with parameter &returnIds=`1`.
- [mSearch2] Optimized for last version of pdoTools.
- [mSearch2] Added parameter "forceSearch" to specify whether or not to show list of resources without search query.
- Improved javascript. Hide of block "limit" when no results.
- Improved speed of mseFiltersHandler2::filterDate().
- Default chunks support Bootstrap3.
- Fixed context switch in action.php

0.8.4 pl
==============
- Added filter by year of document. For example: "publishedon:year".
- Improved search algorithm, when there is only one word in query.
- Improved buildParentsFilter(). Now it works for parents from different contexts.
- Added support of placeholders [^q^] and [^qt^].

0.8.3 pl2
==============
- Improved check of "limit" parameter.

0.8.3 pl2
==============
- Returned missed function "implode_r" into index processor.

0.8.3 pl1
==============
- [mSearch2] Improved search algorithm.
- [mFilter2] Fixed processing parameters of snippet.

0.8.2 pl1
==============
- [mFilter2] If no results, message about it will be returned in "&tplOuter=``".

0.8.2 pl
==============
- [mFilter2] Fixed work with MS2 multicategories.
- [mFilter2] Improved working with search results.
- [mSearch2] Improved search algorithm.

0.8.1 pl1
==============
- [mFilter2] Improved work with modified &queryVar=`` and &parentsVar=``.
- [mFilter2] Improved return of error messages, when nothing found.
- [mFilter2] Improved work with limit, when page loaded by direct link.
- [mFilter2] Improved sort links.