@@ -12,6 +12,10 @@ $tstart = $mtime;
 set_time_limit(0);
 
 require_once 'build.config.php';
+// Refresh model
+if (file_exists('build.model.php')) {
+	require_once 'build.model.php';
+}
 
 /* define sources */
 $root = dirname(dirname(__FILE__)).'/';
@@ -247,8 +251,7 @@ $vehicle->resolve('file',array(
 	'target' => "return MODX_CORE_PATH . 'components/';",
 ));
 
-$resolvers = array('tables','setup');
-foreach ($resolvers as $resolver) {
+foreach ($BUILD_RESOLVERS as $resolver) {
 	if ($vehicle->resolve('php', array('source' => $sources['resolvers'] . 'resolve.'.$resolver.'.php'))) {
 		$modx->log(modX::LOG_LEVEL_INFO,'Added resolver "'.$resolver.'" to category.');
 	}
@@ -262,10 +265,11 @@ $builder->putVehicle($vehicle);
 
 /* now pack in the license file, readme and setup options */
 $builder->setPackageAttributes(array(
-	'changelog' => file_get_contents($sources['docs'] . 'changelog.txt')
-	,'license' => file_get_contents($sources['docs'] . 'license.txt')
-	,'readme' => file_get_contents($sources['docs'] . 'readme.txt')
-	,'setup-options' => array(
+	'changelog' => file_get_contents($sources['docs'] . 'changelog.txt'),
+	'license' => file_get_contents($sources['docs'] . 'license.txt'),
+	'readme' => file_get_contents($sources['docs'] . 'readme.txt'),
+	'chunks' => $BUILD_CHUNKS,
+	'setup-options' => array(
 		'source' => $sources['build'].'setup.options.php',
 	),
 ));
