@@ -3,34 +3,13 @@
 $chunks = array();
 
 $tmp = array(
-	'tpl.mSearch2.row' => array(
-		'file' => 'msearch2.row'
-		,'description' => ''
-	)
-	,'tpl.mFilter2.outer' => array(
-		'file' => 'mfilter2.outer'
-		,'description' => ''
-	)
-	,'tpl.mFilter2.filter.outer' => array(
-		'file' => 'mfilter2.filter.outer'
-		,'description' => ''
-	)
-	,'tpl.mFilter2.filter.checkbox' => array(
-		'file' => 'mfilter2.filter.checkbox'
-		,'description' => ''
-	)
-	,'tpl.mFilter2.filter.number' => array(
-		'file' => 'mfilter2.filter.number'
-		,'description' => ''
-	)
-	,'tpl.mFilter2.filter.radio' => array(
-		'file' => 'mfilter2.filter.radio'
-		,'description' => ''
-	)
-	,'tpl.mFilter2.filter.slider' => array(
-		'file' => 'mfilter2.filter.slider'
-		,'description' => ''
-	)
+	'tpl.mSearch2.row' => 'msearch2.row',
+	'tpl.mFilter2.outer' => 'mfilter2.outer',
+	'tpl.mFilter2.filter.outer' => 'mfilter2.filter.outer',
+	'tpl.mFilter2.filter.checkbox' => 'mfilter2.filter.checkbox',
+	'tpl.mFilter2.filter.number' => 'mfilter2.filter.number',
+	'tpl.mFilter2.filter.radio' => 'mfilter2.filter.radio',
+	'tpl.mFilter2.filter.slider' => 'mfilter2.filter.slider'
 );
 
 foreach ($tmp as $k => $v) {
@@ -39,14 +18,16 @@ foreach ($tmp as $k => $v) {
 	$chunk->fromArray(array(
 		'id' => 0
 		,'name' => $k
-		,'description' => @$v['description']
-		,'snippet' => file_get_contents($sources['source_core'].'/elements/chunks/chunk.'.$v['file'].'.tpl')
+		,'description' => ''
+		,'snippet' => file_get_contents($sources['source_core'].'/elements/chunks/chunk.'.$v.'.tpl')
 		,'static' => BUILD_CHUNK_STATIC
 		,'source' => 1
-		,'static_file' => 'core/components/'.PKG_NAME_LOWER.'/elements/chunks/chunk.'.$v['file'].'.tpl'
+		,'static_file' => 'core/components/'.PKG_NAME_LOWER.'/elements/chunks/chunk.'.$v.'.tpl'
 	),'',true,true);
 
 	$chunks[] = $chunk;
+
+	$BUILD_CHUNKS[$k] = file_get_contents($sources['source_core'].'/elements/chunks/chunk.'.$v.'.tpl');
 }
 
 unset($tmp);
